// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ComparableInput renders with behavior contraction 1`] = `
<div
  className="ComparableInput"
  data-lego="react"
>
  <ControlsBar
    size="s"
  >
    <select2
      maxHeight={Infinity}
      onChange={[Function]}
      placeholder="—"
      size="s"
      theme="normal"
      tone="default"
      type="radio"
      val="=="
      view="classic"
    >
      <menu__item
        key="=="
        val="=="
      >
        Равно
      </menu__item>
      <menu__item
        key="!="
        val="!="
      >
        Не равно
      </menu__item>
      <menu__item
        key=">"
        val=">"
      >
        Больше
      </menu__item>
      <menu__item
        key="<"
        val="<"
      >
        Меньше
      </menu__item>
      <menu__item
        key="<>"
        val="<>"
      >
        От — До
      </menu__item>
    </select2>
    <Bem
      block="ComparableInput"
      elem="input"
    >
      <TextInput
        onChange={[Function]}
        size="s"
        text=""
        theme="normal"
      />
    </Bem>
  </ControlsBar>
</div>
`;

exports[`ComparableInput renders with behavior restrictToNumber 1`] = `
<div
  className="ComparableInput"
  data-lego="react"
>
  <ControlsBar
    size="s"
  >
    <select2
      maxHeight={Infinity}
      onChange={[Function]}
      placeholder="—"
      size="s"
      theme="normal"
      tone="default"
      type="radio"
      val="=="
      view="classic"
    >
      <menu__item
        key="=="
        val="=="
      >
        Равно
      </menu__item>
      <menu__item
        key="!="
        val="!="
      >
        Не равно
      </menu__item>
      <menu__item
        key=">"
        val=">"
      >
        Больше
      </menu__item>
      <menu__item
        key="<"
        val="<"
      >
        Меньше
      </menu__item>
      <menu__item
        key="<>"
        val="<>"
      >
        От — До
      </menu__item>
    </select2>
    <Bem
      block="ComparableInput"
      elem="input"
    >
      <TextInput
        onChange={[Function]}
        size="s"
        text=""
        theme="normal"
      />
    </Bem>
  </ControlsBar>
</div>
`;

exports[`ComparableInput renders with behavior restrictToUnsignedInt 1`] = `
<div
  className="ComparableInput"
  data-lego="react"
>
  <ControlsBar
    size="s"
  >
    <select2
      maxHeight={Infinity}
      onChange={[Function]}
      placeholder="—"
      size="s"
      theme="normal"
      tone="default"
      type="radio"
      val="=="
      view="classic"
    >
      <menu__item
        key="=="
        val="=="
      >
        Равно
      </menu__item>
      <menu__item
        key="!="
        val="!="
      >
        Не равно
      </menu__item>
      <menu__item
        key=">"
        val=">"
      >
        Больше
      </menu__item>
      <menu__item
        key="<"
        val="<"
      >
        Меньше
      </menu__item>
      <menu__item
        key="<>"
        val="<>"
      >
        От — До
      </menu__item>
    </select2>
    <Bem
      block="ComparableInput"
      elem="input"
    >
      <TextInput
        onChange={[Function]}
        size="s"
        text=""
        theme="normal"
      />
    </Bem>
  </ControlsBar>
</div>
`;

exports[`ComparableInput renders with default behavior 1`] = `
<div
  className="ComparableInput"
  data-lego="react"
>
  <ControlsBar
    size="s"
  >
    <select2
      maxHeight={Infinity}
      onChange={[Function]}
      placeholder="—"
      size="s"
      theme="normal"
      tone="default"
      type="radio"
      val="=="
      view="classic"
    >
      <menu__item
        key="=="
        val="=="
      >
        Равно
      </menu__item>
      <menu__item
        key="!="
        val="!="
      >
        Не равно
      </menu__item>
      <menu__item
        key=">"
        val=">"
      >
        Больше
      </menu__item>
      <menu__item
        key="<"
        val="<"
      >
        Меньше
      </menu__item>
      <menu__item
        key="<>"
        val="<>"
      >
        От — До
      </menu__item>
    </select2>
    <Bem
      block="ComparableInput"
      elem="input"
    >
      <TextInput
        onChange={[Function]}
        size="s"
        text=""
        theme="normal"
      />
    </Bem>
  </ControlsBar>
</div>
`;

exports[`ComparableInput renders with range condition value 1`] = `
<div
  className="ComparableInput"
  data-lego="react"
>
  <ControlsBar
    size="s"
  >
    <select2
      maxHeight={Infinity}
      onChange={[Function]}
      placeholder="—"
      size="s"
      theme="normal"
      tone="default"
      type="radio"
      val="<>"
      view="classic"
    >
      <menu__item
        key="=="
        val="=="
      >
        Равно
      </menu__item>
      <menu__item
        key="!="
        val="!="
      >
        Не равно
      </menu__item>
      <menu__item
        key=">"
        val=">"
      >
        Больше
      </menu__item>
      <menu__item
        key="<"
        val="<"
      >
        Меньше
      </menu__item>
      <menu__item
        key="<>"
        val="<>"
      >
        От — До
      </menu__item>
    </select2>
    <Bem
      block="ComparableInput"
      elem="range"
    >
      <NumberRange
        onChange={[Function]}
        range={
          Array [
            "10",
            "20",
          ]
        }
      />
    </Bem>
  </ControlsBar>
</div>
`;

exports[`ComparableInput renders with single condition value and operator != 1`] = `
<div
  className="ComparableInput"
  data-lego="react"
>
  <ControlsBar
    size="s"
  >
    <select2
      maxHeight={Infinity}
      onChange={[Function]}
      placeholder="—"
      size="s"
      theme="normal"
      tone="default"
      type="radio"
      val="!="
      view="classic"
    >
      <menu__item
        key="=="
        val="=="
      >
        Равно
      </menu__item>
      <menu__item
        key="!="
        val="!="
      >
        Не равно
      </menu__item>
      <menu__item
        key=">"
        val=">"
      >
        Больше
      </menu__item>
      <menu__item
        key="<"
        val="<"
      >
        Меньше
      </menu__item>
      <menu__item
        key="<>"
        val="<>"
      >
        От — До
      </menu__item>
    </select2>
    <Bem
      block="ComparableInput"
      elem="input"
    >
      <TextInput
        onChange={[Function]}
        size="s"
        text="10"
        theme="normal"
      />
    </Bem>
  </ControlsBar>
</div>
`;

exports[`ComparableInput renders with single condition value and operator < 1`] = `
<div
  className="ComparableInput"
  data-lego="react"
>
  <ControlsBar
    size="s"
  >
    <select2
      maxHeight={Infinity}
      onChange={[Function]}
      placeholder="—"
      size="s"
      theme="normal"
      tone="default"
      type="radio"
      val="<"
      view="classic"
    >
      <menu__item
        key="=="
        val="=="
      >
        Равно
      </menu__item>
      <menu__item
        key="!="
        val="!="
      >
        Не равно
      </menu__item>
      <menu__item
        key=">"
        val=">"
      >
        Больше
      </menu__item>
      <menu__item
        key="<"
        val="<"
      >
        Меньше
      </menu__item>
      <menu__item
        key="<>"
        val="<>"
      >
        От — До
      </menu__item>
    </select2>
    <Bem
      block="ComparableInput"
      elem="input"
    >
      <TextInput
        onChange={[Function]}
        size="s"
        text="10"
        theme="normal"
      />
    </Bem>
  </ControlsBar>
</div>
`;

exports[`ComparableInput renders with single condition value and operator == 1`] = `
<div
  className="ComparableInput"
  data-lego="react"
>
  <ControlsBar
    size="s"
  >
    <select2
      maxHeight={Infinity}
      onChange={[Function]}
      placeholder="—"
      size="s"
      theme="normal"
      tone="default"
      type="radio"
      val="=="
      view="classic"
    >
      <menu__item
        key="=="
        val="=="
      >
        Равно
      </menu__item>
      <menu__item
        key="!="
        val="!="
      >
        Не равно
      </menu__item>
      <menu__item
        key=">"
        val=">"
      >
        Больше
      </menu__item>
      <menu__item
        key="<"
        val="<"
      >
        Меньше
      </menu__item>
      <menu__item
        key="<>"
        val="<>"
      >
        От — До
      </menu__item>
    </select2>
    <Bem
      block="ComparableInput"
      elem="input"
    >
      <TextInput
        onChange={[Function]}
        size="s"
        text="10"
        theme="normal"
      />
    </Bem>
  </ControlsBar>
</div>
`;

exports[`ComparableInput renders with single condition value and operator > 1`] = `
<div
  className="ComparableInput"
  data-lego="react"
>
  <ControlsBar
    size="s"
  >
    <select2
      maxHeight={Infinity}
      onChange={[Function]}
      placeholder="—"
      size="s"
      theme="normal"
      tone="default"
      type="radio"
      val=">"
      view="classic"
    >
      <menu__item
        key="=="
        val="=="
      >
        Равно
      </menu__item>
      <menu__item
        key="!="
        val="!="
      >
        Не равно
      </menu__item>
      <menu__item
        key=">"
        val=">"
      >
        Больше
      </menu__item>
      <menu__item
        key="<"
        val="<"
      >
        Меньше
      </menu__item>
      <menu__item
        key="<>"
        val="<>"
      >
        От — До
      </menu__item>
    </select2>
    <Bem
      block="ComparableInput"
      elem="input"
    >
      <TextInput
        onChange={[Function]}
        size="s"
        text="10"
        theme="normal"
      />
    </Bem>
  </ControlsBar>
</div>
`;
